[package]
name = "PyHVM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "PyHVM"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rustpython-parser = "0.1.2"
hvm = "1.0.4-beta"
num-bigint = "0.4.3"
num-traits = "0.2.15"